Se debe arrecglar el crud de administracion